--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["add-module-exports", "transform-runtime"],
+  "presets": ["react", "es2015", "stage-3"],
+  "plugins": ["transform-runtime"],
 }
