--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-reveal",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "author": "Roman Nosov <rnosov@gmail.com>",
   "description": "Really simple way to add reveal on scroll animation to your React app.",
   "license": "MIT",
@@ -25,7 +25,7 @@
     "url": "https://github.com/rnosov/react-reveal/issues"
   },
   "homepage": "https://github.com/rnosov/react-reveal",
-  "main": "./dist/Reveal.js",
+  "main": "./dist/index.js",
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "prop-types": "^15.5.10"
