adding more effects

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,22 @@ dist
 node_modules
 npm-debug.log
 lib
+Bounce.js
 Fade.js
+Flash.js
+HeadShake.js
+Jello.js
+Jump.js
+Pulse.js
+Roll.js
+RubberBand.js
+Shake.js
+Slide.js
+Swing.js
+Tada.js
+Wobble.js
 Flip.js
-Base.js
-Cascade.js
+Reveal.js
 Rotate.js
 Stepper.js
 Zoom.js
