--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-reveal",
-  "version": "0.7.2",
+  "version": "0.7.2-beta",
   "author": "Roman Nosov <rnosov@gmail.com>",
   "description": "Really simple way to add reveal on scroll animation to your React app.",
   "license": "MIT",
@@ -43,7 +43,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
@@ -54,6 +55,7 @@
     "react": "^15.3.1",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-test-renderer": "^15.6.2",
     "uglify-js": "^2.7.3"
   },
   "scripts": {
