--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
 dist
 node_modules
 npm-debug.log
-./lib
-./Bounce.js
-./Fade.js
-./Flash.js
-./HeadShake.js
-./Jello.js
-./Jump.js
-./Pulse.js
-./Roll.js
-./RubberBand.js
-./Shake.js
-./Slide.js
-./Swing.js
-./Tada.js
-./Wobble.js
-./Flip.js
-./Reveal.js
-./Rotate.js
-./LightSpeed.js
-./Stepper.js
-./Zoom.js
-./index.js
-./globals.js
-./debounce.js
+/lib
+/Bounce.js
+/Fade.js
+/Flash.js
+/HeadShake.js
+/Jello.js
+/Jump.js
+/Pulse.js
+/Roll.js
+/RubberBand.js
+/Shake.js
+/Slide.js
+/Swing.js
+/Tada.js
+/Wobble.js
+/Flip.js
+/Reveal.js
+/Rotate.js
+/LightSpeed.js
+/Stepper.js
+/Zoom.js
+/index.js
+/globals.js
+/debounce.js
