decoupling responsive component from hamburger

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ npm-debug.log
 /Carousel.js
 /CarouselSkin.js
 /Hamburger.js
-/HamburgerSkin.js
+/Responsive.js
 /HamburgerIcon.js
 /Animation.js
 /Spin.js
