--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ npm-debug.log
 /RevealBase.js
 /Carousel.js
 /CarouselSkin.js
-/Hamburger.js
-/Responsive.js
+/hamburger.js
+/responsive.js
+/withReveal.js
 /HamburgerIcon.js
 /Animation.js
 /Spin.js
